examples/test/testpolicy10000.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10000
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key21: value25
      key16: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value6
      podSelector:
        matchLabels:
          key49: value12
          key21: value18
          key23: value41
